menu-overlay bug horizontal scroll on chrome

--- a/sass/03-regions/_menu-overlay.scss
+++ b/sass/03-regions/_menu-overlay.scss
@@ -13,17 +13,24 @@
 }
 
 .menu-overlay {
-  // display: none;
-  position: absolute;
+  position: fixed;
   right: -80vw;
   top: 0;
-  min-width: 80vw;
-  height: 100vh;
+  opacity: 0;
+  width: 0;
+  height: 100%;
   background: $brown;
   border: 1rem solid $light-brown;
   padding: 2rem;
   z-index: 999;
-  transition: all .3s;
+  transition: all .8s;
+
+  &--visible {
+    opacity: .98;
+    width: 85vw;
+    
+    right: 0;
+  }
 
   &__wrap {
     height: 100%;
@@ -46,9 +53,6 @@
     }
   }
 
-  &--visible {
-    right: 0;
-  }
 }
 
 .link {
